--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
-    <string name="do_not_have_account_yet">Don\\\'t Have An Account Yet?</string>
+    <string name="do_not_have_account_yet">Don\'t Have An Account Yet?</string>
     <string name="register">Register</string>
     <string name="first_name_hint">John</string>
     <string name="last_name">Last Name</string>
@@ -15,4 +15,5 @@
     <string name="email_hint">example@example.com</string>
     <string name="password_hint">*******</string>
     <string name="re_enter_password">Re enter password</string>
+    <string name="welcome">Welcome, %1$s</string>
 </resources>
