--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="password_hint">*******</string>
     <string name="re_enter_password">Re enter password</string>
     <string name="welcome">Welcome, %1$s</string>
+    <string name="log_in_with_authum">Log in With Authum</string>
 </resources>
